# go2_ros2_sdk

./: .dockerignore  .gitignore
docker/: Dockerfile  docker-compose.yml  sim_entrypoint.sh
docs/: nav-stability-bugfix-plan.md
go2_nav_sim/: .gitignore  README.md  package.xml  setup.cfg  setup.py
go2_nav_sim/go2_nav_sim/: goal_relay.py  kinematic_sim_node.py  scenario_runner.py
go2_nav_sim/launch/: sim_bringup.launch.py
go2_nav_sim/tools/: make_example_world.py  ply_to_map.py
go2_robot_sdk/: package.xml  setup.py
go2_robot_sdk/config/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
go2_robot_sdk/go2_robot_sdk/: waypoint_tool.py
go2_robot_sdk/go2_robot_sdk/domain/entities/: robot_config.py
go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: ros2_publisher.py
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
go2_robot_sdk/launch/: mapping.launch.py  navigation.launch.py  robot.launch.py  robot_cpp.launch.py
go2_robot_sdk/urdf/: go2.urdf  go2_with_realsense.urdf  multi_go2.urdf
lidar_processor/lidar_processor/: lidar_to_pointcloud_node.py
scripts/: build_robot_image.sh  run_mapping.sh  run_mapping_nav.sh  run_nav.sh  run_sim.sh  save_map.sh  waypoint.sh
