<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_nav_sim</name>
  <version>0.0.0</version>
  <description>
    Tier-0 kinematic Nav2 test harness for the Unitree Go2: a fake base that
    integrates cmd_vel into odom/TF and a map-raycast laser, so the real Nav2
    config can be exercised headlessly without Gazebo or a GPU. Includes a
    scenario runner that scores stability metrics (overshoot, oscillation,
    obstacle clearance, goal error).
  </description>
  <maintainer email="dev@prosus-robotics.local">Prosus Robotics</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>go2_robot_sdk</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
